<resources>
    <string name="app_name">Prison App v2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_test">test</string>


    <string name="home">Home</string>
    <string name="add_new_prisoner">Add New Prisoner</string>
    <string name="update_prisoner_details">Update Prisoner Details</string>
    <string name="search_prisoners">Search Prisoners</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="delete_prisoners">Delete Prisoners</string>


    <string name="open"></string>
    <string name="close"></string>
    <string name="id_here" />
    <string name="name_here" />
    <string name="sentence" />
    <string name="charge" />
    <string name="name" />
    <string name="id" />
    <string name="sentence_here" />
    <string name="charge_here" />
    <string name="Add_User" />
    <string name="add_user">Add User</string>
    <string name="todo">TODO</string>
    <string name="submit">Submit</string>
    <string name="reset">reset</string>
    <string name="seclevel">SecLevel</string>
    <string name="charge_description">Charge Description</string>
    <string name="age">Age</string>
    <string name="update">Update</string>


    <array name="spinnerLevels">
        <item>Max</item>
        <item>Med</item>
        <item>Min</item>
    </array>

</resources>
