<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_action_home"
        android:title="@string/home">

    </item>
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search_prisoners">

    </item>
    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_action_add_prisoner"
        android:title="@string/add_new_prisoner">

    </item>
    <item
        android:id="@+id/adduser"
        android:icon="@drawable/ic_action_add_prisoner"
        android:title="@string/add_user">

    </item>
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/settings">

    </item>
    <item
        android:id="@+id/log_out"
        android:icon="@drawable/ic_action_logout"
        android:title="@string/log_out">

    </item>


</menu>